--- a/index.html
+++ b/index.html
@@ -4,11 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Weather</title>
 </head>
 <body>
-    
+    <div class="container">
+<h1>Name of City</h1>
+
+    <form id="search-location">
+
+    <input type="text" 
+    class="searchbar"
+    id="search-city"
+    placeholder=" Enter Location"
+    autocomplete="off" />
+  
+    <button class="search-btn"
+    type="submit">Search
+    </button>
+
+    <button class="currentBtn"
+    type="submit" id="current-btn"
+    value="">Current
+    </button>
+</form>
+
+<h2> Date Time</h2>
+
+<p>
+
+</p>
+</div>
 
     <script src="src/index.js"></script>
 </body>
