Finished The Main HTML Elements and Continued CSS

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 </head>
 <body>
     <div class="container">
-<h1>Name of City</h1>
+       <h1>Name of City</h1>
 
-    <form id="search-location">
+          <form id="search-location">
 
-    <input type="text" 
-    class="searchbar"
-    id="search-city"
-    placeholder=" Enter Location"
-    autocomplete="off" />
+          <input type="text" 
+          class="searchbar"
+         id="search-city"
+         placeholder=" Enter Location"
+         autocomplete="off" />
   
     <button class="search-btn"
     type="submit">Search
@@ -35,10 +35,33 @@
 </form>
 
 <h2> Date Time</h2>
+<h3>Light Cloud</h3>
+<h4><strong>23°</strong> c|f</h4>
+<p>Humidity</br>Wind Speed</p>
 
-<p>
 
-</p>
+
+    <div class="row g-2">
+        <div class="col-4">
+            <div class="first-temp">6.00</div>
+        </div>
+        <div class="col-4">
+            <div class="second-temp">9.00</div>
+        </div>
+        <div class="col-4">
+            <div class="third-temp">12.00</div>
+        </div>
+        <div class="col-4">
+            <div class="fourth-temp">15.00</div>
+        </div>
+        <div class="col-4">
+            <div class="firth-temp">18.00</div>
+        </div>
+        <div class="col-4">
+            <div class="sixth-temp">21.00</div>
+        </div>
+
+</div>
 </div>
 
     <script src="src/index.js"></script>
