Started to Connect Classes to JS

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-       <h1>Name of City</h1>
+       <h1 class = "city">Name of City</h1>
 
           <form id="search-location">
 
@@ -34,10 +34,19 @@
     </button>
 </form>
 
-<h2> Date Time</h2>
-<h3>Light Cloud</h3>
-<h4><strong>23°</strong> c|f</h4>
-<p>Humidity</br>Wind Speed</p>
+<h2><span class="date">Date Time</span></h2>
+
+<h3>
+    <div class ="icon">🌞</div>
+    <div class = "discription">Light Cloud</div>
+</h3>
+
+<h4><span class = "temperature">23°</span><span class = "untis">c|f</span><h4>
+    <p>
+        <span class="Humidity">Humidity</span>
+    </br>
+        <span class ="wind">Wind Speed</span>
+    </p>
 
 
 
