--- a/index.html
+++ b/index.html
@@ -71,20 +71,11 @@
         </ul>       
     </p>
 
-    <div class = "row weather-forecast">
-        <div class="col-2">
-            <h5>
-                6.00am
-            </h5>
-            <img scr="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                 alt=""/>
-            <div class="weather-forecast-temperature">
-                <strong>22</strong>17
-            </div>
-        </div>
+    <div class = "row-weather-forecast" id="forecast">
+
     </div>
 
-    
+
 </div>
     <script src="src/index.js"></script>
 </body>
