Added Current Location Search Button

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </form>
 
         <h2>
-            <span id="date" value = "date"> Date </span>
+            <span id="date" value = "date"></span>
         </h2>
         <img scr="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
              alt="Clear"
@@ -70,12 +70,8 @@
             </li>
         </ul>       
     </p>
-
     <div class = "row-weather-forecast" id="forecast">
-
     </div>
-
-
 </div>
     <script src="src/index.js"></script>
 </body>
