Added Reference Link

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
         <div class = "row weather-forecast" id="forecast"></div>
     </h5>
 </div>
+    <span class="link">
+        <a rel="stylesheet" href="https://github.com/hannahdurrant98/my-first-project" target="blank" class="project-link">
+            Open Source Code
+        </a> By Hannah Durrant
+    </span>
     <script src="src/index.js"></script>
 </body>
 </html>
